--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -74,3 +74,39 @@
   publisher={Foundation for Open Access Statistics},
   doi={10.18637/jss.v101.i01}
 }
+
+@article{HapMap2010,
+  title={Integrating common and rare genetic variation in diverse human populations},
+  author={The International HapMap 3 Consortium},
+  journal={Nature},
+  volume={467},
+  pages={52--58},
+  year={2010},
+  publisher={Nature Publishing Group},
+  doi={10.1038/nature09298}
+}
+
+@article{1000Genomes2015,
+  title={A global reference for human genetic variation},
+  author={The 1000 Genomes Project Consortium},
+  journal={Nature},
+  volume={526},
+  pages={68--74},
+  year={2015},
+  publisher={Nature Publishing Group},
+  doi={10.1038/nature15393}
+}
+
+@article{Anderson2010,
+  title={Data quality control in genetic case-control association studies},
+  author={Anderson, Carl A and Pettersson, Fredrik H and Clarke, Gerard M and Cardon, Lon R and Morris, Andrew P and Zondervan, Krina T},
+  journal={Nature Protocols},
+  volume={5},
+  number={9},
+  pages={1564--1573},
+  year={2010},
+  publisher={Nature Publishing Group},
+  doi={10.1038/nprot.2010.116},
+  pmid={21085122},
+  pmcid={PMC3025522}
+}
