--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -110,3 +110,36 @@
   pmid={21085122},
   pmcid={PMC3025522}
 }
+
+@article{Yang2011,
+  title={GCTA: a tool for Genome-wide Complex Trait Analysis},
+  author={Yang, Jian and Lee, Sang Hong and Goddard, Michael E and Visscher, Peter M},
+  journal={American Journal of Human Genetics},
+  volume={88},
+  number={1},
+  pages={76--82},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{Bulik-Sullivan2014,
+  title={LD score regression distinguishes confounding from polygenicity in genome-wide association studies},
+  author={Bulik-Sullivan, Brendan and Finucane, Hilary K and Anttila, Verneri and Gusev, Alexander and Day, Felix R and Loh, Po-Ru and ReproGen Consortium and Psychiatric Genomics Consortium and Genetic Consortium for Anorexia Nervosa of the Wellcome Trust Case Control Consortium and Perry, John R B and Patterson, Nick and Robinson, Elise B and Daly, Mark J and Price, Alkes L and Neale, Benjamin M},
+  journal={Nature Genetics},
+  volume={47},
+  pages={291--295},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{Prive2020,
+  title={LDpred2: better, faster, stronger},
+  author={Privé, Florian and Arbel, Julyan and Vilhjálmsson, Bjarni J},
+  journal={Bioinformatics},
+  volume={36},
+  number={22-23},
+  pages={5424--5431},
+  year={2020},
+  publisher={Oxford University Press},
+  doi={10.1093/bioinformatics/btaa1029}
+}
