update docs for TestXGene() - add references - readability

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -143,3 +143,30 @@
   publisher={Oxford University Press},
   doi={10.1093/bioinformatics/btaa1029}
 }
+
+@article{Svishcheva2019,
+  title={Gene-based association tests using GWAS summary statistics},
+  author={Svishcheva, Galina R and Belonogova, Natalia M and Zorkoltseva, Irina V and Kirichenko, Anna V and Axenovich, Tatiana I},
+  journal={Bioinformatics},
+  volume={35},
+  number={19},
+  pages={3701--3708},
+  year={2019},
+  publisher={Oxford University Press},
+  doi={10.1093/bioinformatics/btz172},
+  pmid={30860568}
+}
+
+@article{Belonogova2022,
+  title={sumSTAAR: A flexible framework for gene-based association studies using GWAS summary statistics},
+  author={Belonogova, Natalia M and Svishcheva, Galina R and Kirichenko, Anna V and Zorkoltseva, Irina V and Tsepilov, Yakov A and Axenovich, Tatiana I},
+  journal={PLoS Computational Biology},
+  volume={18},
+  number={6},
+  pages={e1010172},
+  year={2022},
+  publisher={Public Library of Science},
+  doi={10.1371/journal.pcbi.1010172},
+  pmid={35653402},
+  pmcid={PMC9197066}
+}
