MetaGWAS() doc overhaul - references - VERIFY - readability - exmaple formatting (example does not run)

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -170,3 +170,28 @@
   pmid={35653402},
   pmcid={PMC9197066}
 }
+
+@article{Magi2010,
+  title={GWAMA: software for genome-wide association meta-analysis},
+  author={Mägi, Reedik and Morris, Andrew P},
+  journal={BMC Bioinformatics},
+  volume={11},
+  pages={288},
+  year={2010},
+  publisher={BioMed Central},
+  doi={10.1186/1471-2105-11-288}
+}
+
+@article{Willer2010,
+  title={METAL: fast and efficient meta-analysis of genomewide association scans},
+  author={Willer, Cristen J and Li, Yun and Abecasis, Gonçalo R},
+  journal={Bioinformatics},
+  volume={26},
+  number={17},
+  pages={2190--2191},
+  year={2010},
+  publisher={Oxford University Press},
+  doi={10.1093/bioinformatics/btq340},
+  pmid={20616382},
+  pmcid={PMC2922887}
+}
