GeneticCorrBT() doc updates - readability - references - examples

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -195,3 +195,15 @@
   pmid={20616382},
   pmcid={PMC2922887}
 }
+
+@article{Lee2012,
+  title={Estimation of pleiotropy between complex diseases using SNP-derived genomic relationships and restricted maximum likelihood},
+  author={Lee, Sang Hong and Wray, Naomi R and Goddard, Michael E and Visscher, Peter M},
+  journal={Bioinformatics},
+  volume={28},
+  pages={2540--2542},
+  year={2012},
+  publisher={Oxford University Press},
+  doi={10.1093/bioinformatics/bts474},
+  pmid={22843982}
+}
