Updates - fix indepSNPs vs IndepSNPs - address https://github.com/boseb/GXwasR/pull/14#pullrequestreview-2767076896 by:   - removing references from 3838 and 3027   - adding reference to REFERENCES.bib and inserting @ 5993   - cite 414 as Belonogova2022

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -207,3 +207,14 @@
   doi={10.1093/bioinformatics/bts474},
   pmid={22843982}
 }
+
+@article{Ning2020,
+  title={High-definition likelihood inference of genetic correlations across human complex traits},
+  author={Ning, Zhen and Pawitan, Yudi and Shen, Xia},
+  journal={Nature Genetics},
+  volume={52},
+  pages={859--864},
+  year={2020},
+  publisher={Nature Publishing Group},
+  doi={10.1038/s41588-020-0676-4}
+}
