add temporary package image

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# GXwasR
+# GXwasR <img src="man/figures/logo.png" align="right" height="120" alt="" />
 
 A tool for conducting sex-aware quality control, association analysis, and testing various models of sex-dependent genetic effects in complex traits.
 
