--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ This package implements various statistical genetics models for Genome-Wide Asso
 
 **(F)Utility Functions:** `FilterPlinkSample()`; `ComputeGeneticPC()`; `ClumpLD()`; `GetMFPlink()`; `plinkVCF()`; `MergeRegion()`; `FilterAllele()`; `PlinkSummary()`
 
-## Installation
+## 📦 Installation
 
 You can install the development version of GXwasR from [GitHub](https://github.com/) with:
 
@@ -44,7 +44,55 @@ You can install the development version of GXwasR from [GitHub](https://github.c
 pak::pak("boseb/GXwasR")
 ```
 
-## Example
+## External Dependency: PLINK
+
+This package depends on the [PLINK](https://www.cog-genomics.org/plink/) command-line tool (version 1.9 or 2.0). PLINK must be installed separately and made available on your system.
+
+PLINK is not bundled with this package and must either:
+
+- be on your system PATH, or
+- be specified via the PLINK_PATH environment variable.
+
+### 🔧 PLINK Installation Instructions
+
+Binaries for all major platforms can be downloaded from:
+
+- [PLINK v1.9](https://www.cog-genomics.org/plink/1.9/)
+- [PLINK v2.0](https://www.cog-genomics.org/plink/2.0/)
+
+Detailed, platform-specific setup instructions can be found in the INSTALL file included with this package.
+
+### 🧭 Configuring the PLINK Path
+
+This package will attempt to locate PLINK using:
+
+- The `PLINK_PATH` environment variable, if set.
+- The system path, via `Sys.which("plink")`.
+
+If PLINK is not found, an error will be raised with guidance on how to resolve it.
+
+You can manually set the path in your R session:
+
+```r
+Sys.setenv(PLINK_PATH = "/path/to/plink")
+```
+
+For a persistent configuration, you can add this line to your .Renviron file:
+
+```
+PLINK_PATH=/path/to/plink
+```
+
+To verify that PLINK is discoverable:
+
+```r
+plink_path <- Sys.getenv("PLINK_PATH", unset = Sys.which("plink"))
+if (!file.exists(plink_path) || !nzchar(plink_path)) {
+  stop("PLINK binary not found. Please install PLINK and/or set the PLINK_PATH environment variable.")
+}
+```
+
+## Example Analysis
 
 Run a genome-wide association study (GWAS) and X-chromosome-wide association study (XWAS):
 
