--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -70,3 +70,77 @@ Notes
 - PLINK is released under the GNU General Public License and is freely available.
 - This package does not modify the user system and assumes PLINK is installed separately by the user.
 - For reproducibility, you are encouraged to document the PLINK version used in your analyses.
+
+GCTA binary installation instructions
+=====================================
+
+This package depends on the external command-line tool GCTA (https://yanglab.westlake.edu.cn/software/gcta/),
+which is not distributed with the package. Please follow the instructions below to download and install
+GCTA for your operating system.
+
+───────────────────────────────────────────────
+Windows
+───────────────────────────────────────────────
+
+1. Visit: https://yanglab.westlake.edu.cn/software/gcta/
+2. Scroll down to the Windows section under "Download".
+3. Download the latest Windows binary archive (e.g., `gcta-1.94.1.zip`).
+4. Extract the archive contents.
+5. Move `gcta64.exe` to a folder that is part of your system PATH
+   (e.g., `C:\Program Files\GCTA\`), or note the full path to it.
+6. Optionally, set the environment variable `GCTA_PATH` in R or your system:
+
+   In R:
+     Sys.setenv(GCTA_PATH = "C:/path/to/gcta64.exe")
+
+───────────────────────────────────────────────
+macOS (Apple Silicon or Intel)
+───────────────────────────────────────────────
+
+1. Visit: https://yanglab.westlake.edu.cn/software/gcta/
+2. Download the macOS binary archive (e.g., `gcta-1.94.4-macOS-arm64.zip` or `gcta-1.94.1-macOS-x86_64.zip`).
+3. Extract the archive contents.
+4. Move `gcta64` to a directory in your PATH, e.g., `/usr/local/bin/` or `/opt/homebrew/bin/`.
+5. Ensure the binary is executable:
+     chmod +x /usr/local/bin/gcta64
+6. Optionally, set the environment variable in R:
+
+   In R:
+     Sys.setenv(GCTA_PATH = "/usr/local/bin/gcta64")
+
+───────────────────────────────────────────────
+Linux
+───────────────────────────────────────────────
+
+1. Visit: https://yanglab.westlake.edu.cn/software/gcta/
+2. Download the Linux binary archive (e.g., `gcta-1.94.1-linux-kernel-3-x86_64.zip`).
+3. Extract the archive contents.
+4. Move `gcta64` to `/usr/local/bin/` or another directory in your PATH.
+5. Make the binary executable:
+     chmod +x /usr/local/bin/gcta64
+6. Optionally, set the GCTA_PATH environment variable:
+
+   In R:
+     Sys.setenv(GCTA_PATH = "/usr/local/bin/gcta64")
+
+───────────────────────────────────────────────
+Testing your installation
+───────────────────────────────────────────────
+
+To check that GCTA is available in R:
+
+```r
+gcta_path <- Sys.getenv("GCTA_PATH", unset = Sys.which("gcta64"))
+if (!file.exists(gcta_path) || !nzchar(gcta_path)) {
+  stop("GCTA binary not found. Please install GCTA and/or set the GCTA_PATH environment variable.")
+}
+```
+
+─────────────────────────────────────────────── 
+Notes 
+───────────────────────────────────────────────
+
+- GCTA is distributed by the Yang Lab and may be subject to usage restrictions — review the license and citation requirements.
+- This package does not modify the user system and assumes GCTA is installed separately by the user.
+- The GCTA binary is named gcta64 on all platforms.
+- For reproducibility, you are encouraged to document the GCTA version used in your analyses.
