--- a/README.Rmd
+++ b/README.Rmd
@@ -92,6 +92,51 @@ if (!file.exists(plink_path) || !nzchar(plink_path)) {
 }
 ```
 
+## External Dependency: GCTA
+
+This package also utilizes the [GCTA](https://yanglab.westlake.edu.cn/software/gcta/#Overview) command-line tool (Genome-wide Complex Trait Analysis). GCTA must be installed separately and made available on your system.
+
+GCTA is not bundled with this package and must either:
+
+-be on your system PATH, or
+- be specified via the GCTA_PATH environment variable.
+
+### 🔧 GCTA Installation Instructions
+
+Binaries for all major platforms can be downloaded from the [GCTA](https://yanglab.westlake.edu.cn/software/gcta/#Overview) website.
+
+Detailed, platform-specific setup instructions can be found in the INSTALL file included with this package.
+
+### 🧭 Configuring the GCTA Path
+
+This package will attempt to locate GCTA using:
+
+- The GCTA_PATH environment variable, if set.
+- The system path, via Sys.which("gcta64").
+
+If GCTA is not found, an error will be raised with guidance on how to resolve it.
+
+You can manually set the path in your R session:
+
+```r
+Sys.setenv(GCTA_PATH = "/path/to/gcta64")
+```
+
+For a persistent configuration, you can add this line to your .Renviron file:
+
+```
+GCTA_PATH=/path/to/gcta64
+```
+
+To verify that GCTA is discoverable:
+
+```r
+gcta_path <- Sys.getenv("GCTA_PATH", unset = Sys.which("gcta64"))
+if (!file.exists(gcta_path) || !nzchar(gcta_path)) {
+  stop("GCTA binary not found. Please install GCTA and/or set the GCTA_PATH environment variable.")
+}
+```
+
 ## Example Analysis
 
 Run a genome-wide association study (GWAS) and X-chromosome-wide association study (XWAS):
