--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ pak::pak("boseb/GXwasR")
 
 ## External Dependency: PLINK
 
-This package depends on the [PLINK](https://www.cog-genomics.org/plink/) command-line tool (version 1.9 or 2.0). PLINK must be installed separately and made available on your system.
+This package depends on the [PLINK](https://www.cog-genomics.org/plink/) command-line tool (version 1.9). PLINK must be installed separately and made available on your system.
 
 PLINK is not bundled with this package and must either:
 
@@ -58,7 +58,6 @@ PLINK is not bundled with this package and must either:
 Binaries for all major platforms can be downloaded from:
 
 - [PLINK v1.9](https://www.cog-genomics.org/plink/1.9/)
-- [PLINK v2.0](https://www.cog-genomics.org/plink/2.0/)
 
 Detailed, platform-specific setup instructions can be found in the INSTALL file included with this package.
 
