--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -16,7 +16,7 @@ Windows
 3. Extract the archive contents.
 4. Move `plink.exe` to a folder that is part of your system PATH
    (e.g., `C:\Program Files\plink\`), or note the full path to it.
-5. Optionally, set the environment variable `PLINK_PATH` in R or your system:
+6. Preferrably, set the PLINK_PATH environment variable in R:
 
    In R:
      Sys.setenv(PLINK_PATH = "C:/path/to/plink.exe")
@@ -31,7 +31,7 @@ macOS (Apple Silicon or Intel)
 4. Move `plink` to a directory in your PATH, e.g., `/usr/local/bin/` or `/opt/homebrew/bin/`.
 5. Ensure the binary is executable:
      chmod +x /usr/local/bin/plink
-6. Optionally, set the PLINK_PATH environment variable in R:
+6. Preferrably, set the PLINK_PATH environment variable in R:
 
    In R:
      Sys.setenv(PLINK_PATH = "/path/to/plink")
@@ -46,7 +46,7 @@ Linux
 4. Move `plink` to a directory in your PATH, e.g., `/usr/local/bin/` or `/opt/homebrew/bin/`.
 5. Make sure the binary is executable:
      chmod +x /usr/local/bin/plink
-5. Optionally, set the PLINK_PATH environment variable in R:
+5. Preferrably, set the PLINK_PATH environment variable in R:
 
    In R:
      Sys.setenv(PLINK_PATH = "/usr/local/bin/plink")
@@ -89,7 +89,7 @@ Windows
 4. Extract the archive contents.
 5. Move `gcta64.exe` to a folder that is part of your system PATH
    (e.g., `C:\Program Files\GCTA\`), or note the full path to it.
-6. Optionally, set the environment variable `GCTA_PATH` in R or your system:
+6. Preferrably, set the GCTA_PATH environment variable in R:
 
    In R:
      Sys.setenv(GCTA_PATH = "C:/path/to/gcta64.exe")
@@ -104,7 +104,7 @@ macOS (Apple Silicon or Intel)
 4. Move `gcta64` binary (rename if necessary) to a directory in your PATH, e.g., `/usr/local/bin/` or `/opt/homebrew/bin/`.
 5. Ensure the binary is executable:
      chmod +x /usr/local/bin/gcta64
-6. Optionally, set the environment variable in R:
+6. Preferrably, set the GCTA_PATH environment variable in R:
 
    In R:
      Sys.setenv(GCTA_PATH = "/usr/local/bin/gcta64")
@@ -119,7 +119,7 @@ Linux
 4. Move `gcta64` to `/usr/local/bin/` or another directory in your PATH.
 5. Make the binary executable:
      chmod +x /usr/local/bin/gcta64
-6. Optionally, set the GCTA_PATH environment variable:
+6. Preferrably, set the GCTA_PATH environment variable in R:
 
    In R:
      Sys.setenv(GCTA_PATH = "/usr/local/bin/gcta64")
