--- a/vignettes/decoding_ancestry.Rmd
+++ b/vignettes/decoding_ancestry.Rmd
@@ -132,7 +132,7 @@ More information can be found here: http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/ph
 ### Outlier Detection and Ancestry Assignment Analysis:
 **Flexibility in Reference Population Selection:** A key feature of the function is its versatility in handling various reference populations. Users have the freedom to select a specific reference population against which the study samples' ancestry labels are compared. For instance, setting the parameter `outlierOf` to EUR (i.e., `Ref_EUR`) enables the identification of non-European outliers in a European context. Other reference populations like AFR (African), EAS (East Asian), and SAS (South Asian) can also be used, allowing for a wide range of comparative ancestral analyses. This flexibility ensures that `AncestryCheck` can cater to diverse research needs and objectives.
 
-**Setting Outlier/Prediction Thresholds:** The function allows users to define specific thresholds for outlier detection/ancestry assignement, adding a layer of customization to the analysis. It employs a methodical approach by calculating PC1 and PC2 Z-scores for each subject in relation to mean and standard deviation of PC1 and PC2 for each reference population. Samples with PC1 and PC2 Z-scores within the user-defined threshold are predicted as having the same ancestry as that reference population. For example, in the case of European reference samples, the function computes the mean and standard deviaiton of the first two principal components (`mean(PC1 of Ref_EUR)`, `sd(PC1 of Ref_EUR`), `mean(PC2 of Ref_EUR)`, `sd(PC2 of Ref_EUR)`). It then calculates Z-scores for PC1 and PC2 (`Z-score PC1 of Ref_EUR <- (PC1 - mean(PC1 of Ref_EUR))/sd(PC1 of Ref_EUR)`, `Z-score PC2 of Ref_EUR <- (PC2 - mean(PC2 of Ref_EUR))/sd(PC2 of Ref_EUR)` ) for the samples in relation to the European Reference. Any study sample whose PC1 and PC2 Z-score is considered an outlier of the European population. This approach is particularly effective in pinpointing samples with ancestral backgrounds that significantly deviate from the selected reference population, providing a clear and quantifiable method to identify and analyze outliers.
+**Setting Outlier/Prediction Thresholds:** The function allows users to define specific thresholds for outlier detection/ancestry assignement, adding a layer of customization to the analysis. It employs a methodical approach by calculating PC1 and PC2 Z-scores for each subject in relation to mean and standard deviation of PC1 and PC2 for each reference population. Samples with PC1 and PC2 Z-scores within the user-defined threshold are predicted as having the same ancestry as that reference population. For example, in the case of European reference samples, the function computes the mean and standard deviation of the first two principal components (`mean(PC1 of Ref_EUR)`, `sd(PC1 of Ref_EUR`), `mean(PC2 of Ref_EUR)`, `sd(PC2 of Ref_EUR)`). It then calculates Z-scores for PC1 and PC2 (`Z-score PC1 of Ref_EUR <- (PC1 - mean(PC1 of Ref_EUR))/sd(PC1 of Ref_EUR)`, `Z-score PC2 of Ref_EUR <- (PC2 - mean(PC2 of Ref_EUR))/sd(PC2 of Ref_EUR)` ) for the samples in relation to the European Reference. Any study sample whose PC1 and PC2 Z-score is considered an outlier of the European population. This approach is particularly effective in pinpointing samples with ancestral backgrounds that significantly deviate from the selected reference population, providing a clear and quantifiable method to identify and analyze outliers.
 
 ### Visualization and Reporting:
 **PCA Plot Visualization:** One of the most insightful aspects of `AncestryCheck` is its ability to visually present the results of the PCA. This is done through a color-coded scatter plot that displays the first two principal components. This graphical representation is instrumental in highlighting the genetic similarities and differences among the analyzed populations. By plotting individuals on this scatter plot, researchers can easily discern the underlying genetic structure and observe how study samples cluster with or diverge from various reference populations.
@@ -184,7 +184,7 @@ Before exploring the practical application of the `AncestryCheck` function, it i
 
 - `highLD_regions`: This parameter requires a dataframe containing known high LD regions. A dataframe from Anderson et. al.[4], 'highLD_hg19' from hg19 genome built is provided in the package.
 
-- `study_pop`: A dataframe containing two columns for the study: sample ID (IID) and the ancestry label. An example dataframe prefied as 'example_data_study_sample_ancestry' for 'GXwasR_example' data.
+- `study_pop`: A dataframe containing two columns for the study: sample ID (IID) and the ancestry label. An example dataframe prefixed as 'example_data_study_sample_ancestry' for 'GXwasR_example' data.
 
 - `outlier` (default = FALSE): A Boolean value specifying whether outlier detection will be performed.
 
@@ -257,7 +257,7 @@ The plot shows the distribution of individual genetic samples along the first tw
 
 The points are spread across the PCA plot, with each cluster likely representing genetic similarity within a group and differences between the groups. The reference populations, `Ref_AFR`, `Ref_EAS`, `Ref_EUR`, and `Ref_SAS` clustered distinctively, suggesting clear genetic differentiation between these populations. The study populations overlap with the `Ref_EUR` (`Euoprean`) reference population, indicating European ancestry, with each study subgroup (`FIN, GBR, TSI`) forming subclusters, suggesting finer-scale differences in ancestry within Europe. 
 
-Since the study dataset was simulated from CEU 1000 Genome dataset, it is not suprising that we do see some outlier samples. Specifically, TSI population is not highly similar to CEU. 
+Since the study dataset was simulated from CEU 1000 Genome dataset, it is not surprising that we do see some outlier samples. Specifically, TSI population is not highly similar to CEU. 
 
 ## AncestryCheck Using ThousandGenome Reference
 
